--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -397,12 +397,12 @@ We will let you know if publication dates are postponed, and look for a solution
 <details>
   <summary>Do you provide tracking / reporting?</summary>
 
-We don't provide any kind reporting by default, but you can ask for a basic reporting one week after the send.
+We don't provide any reporting by default, but you can ask for a basic reporting one week after the send.
 
 To measure the result of your newsletter campaign, we suggest:
 
-- to provide your own tracking links to count clicks: use [bit.ly](https://bit.ly/)!
-- to intercept the `utm_` querystring parameters we automatically add to all external links
+- to add [`utm_` querystring parameters](https://en.wikipedia.org/wiki/UTM_parameters) (we automatically add some default utm parameters in case you don't provide them)
+- to provide your own tracking links to count clicks (please do not use [bit.ly](https://bit.ly/), it often flag emails as spam on some email clients)
 
 In the future, we will look into providing a good reporting automatically.
 
