Add "What happens if I don't submit my ad copy on time?" section

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -428,3 +428,20 @@ This newsletter is being built in public, in a transparent way:
 In case you don't want your company's name to appear in our public calendar, please give us a company alias name.
 
 </details>
+
+<details>
+    <summary>
+        What happens if I don't submit my ad copy on time?
+    </summary>
+
+    It is your responsibility to provide the ad copy on time, at least one week before the publication date.
+
+    Unless we have an agreement, it is not possible to cancel a sponsorship slot at the last minute. We will have to run your ad, no matter what.
+
+    In case we don't receive your ad copy on time, we will:
+    - use the copy of a previous ad, if possible
+    - fallback to a quick-and-dirty ad we create ourselves based on your ad landing page
+
+    For these reasons, we strongly recommend to submit your ad copy on time, including ad updates.
+
+</details>
