--- a/website/newsletter/170/index.mdx
+++ b/website/newsletter/170/index.mdx
@@ -55,7 +55,7 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 [![Process Documents using React PDF Library by Apryse](/emails/issues/170/apryse.jpg)](https://bit.ly/3He15PD)
 
-**[CMSProcess Documents using React PDF Library by Apryse](https://bit.ly/3He15PD)**
+**[Process Documents using React PDF Library by Apryse](https://bit.ly/3He15PD)**
 
 Transform your applications with Apryse's React PDF Library. Seamlessly integrate an exceptional viewer experience for web, mobile, and desktop. View, edit, redact and annotate with support for PDFs, Microsoft Office, video, images, HTML, and more. 
 
