--- a/website/newsletter/170/index.mdx
+++ b/website/newsletter/170/index.mdx
@@ -3,7 +3,6 @@ slug: /170
 title: "This Week In React #170: Waku, Remix, Donuts, RSC resentment, React 19, Aria Components, Storybook, Postgres Components, hydration, streams, VisionOS, atob, Maestro, Tamagui, VisionCamera..."
 authors: [slorber]
 date: 01-17-2024
-unlisted: true
 ---
 
 Hi everyone!
@@ -12,7 +11,7 @@ This week we had some really great React articles, but also interesting releases
 
 On the React Native side, it's calm. We are eagerly waiting for the Expo SDK 50 which this time is released much later than the beta. We are also waiting for the official launch of VisionOS, a new platform that React Native will support.
 
-Yesterday I celebrated [10 years of React experience](https://twitter.com/sebastienlorber/status/1747307299356447148) 🙉 It's hard to believe how my career changed thanks to React this decade, considering I used to really dislike JavaScript.
+I just [celebrated 10 years of React experience](https://twitter.com/sebastienlorber/status/1747307299356447148) 🙉 It's hard to believe how my career changed thanks to React, considering I used to really dislike JavaScript.
 
 <!-- truncate -->
 
